--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@typechain/truffle-v5": "^2.0.2",
     "@types/web3": "^1.2.2",
-    "typechain": "^2.0.0"
+    "truffle": "^5.1.47",
+    "truffle-assertions": "^0.9.2",
+    "typechain": "2.0.0",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "truffle-typings": "^1.0.8"
   },
   "scripts": {
     "generate-types": "typechain --target=truffle-v5 \"./build/contracts/*.json\"",
+    "test": "truffle test",
     "postinstall": "truffle compile && yarn generate-types",
     "migrate": "tsc -p ./tsconfig.migrate.json --outDir ./migrations && truffle migrate",
     "typecheck": "tsc --noEmit"
